# rusty-ants

./: Cargo.toml  README.md  run.sh  rusty-ants
src/: anthill.rs  main.rs
