[package]
name = "rusty-ants"
version = "0.1.0"
authors = ["Viktor Nagy <viktor.nagy1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
play = "0.5.3"

[dependencies.iced]
version = "0.2.0"
features = ["canvas", "tokio", "debug"]

[dependencies.iced_native]
version = "0.3.0"
